--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -2,18 +2,24 @@ $breakpoint-1:466px;
 $breakpoint-2:668px;
 $breakpoint-3:900px;
 $background-bleu: rgb(231, 248, 252);
-$couleur-texte: rgb(22, 80, 95);
+$couleur-texte: darken($background-bleu, 80);
 $couleur-promo: rgb(128, 3, 32);
-$gris-transparent: rgba(226,226,226, 0.5);
+$gris: rgb(226,226,226);
+$gris-transparent: rgba( $gris, .5 );
 
-// Ne marche pas en local
 @font-face {
     font-family: "Bernina";
     src: url("../fonts/BerninaSans-Web-CondensedBold.woff2") format("woff2")
 }
 
-.body{
+@font-face{
+    font-family: "Gotham-Book";
+    src: url("../fonts/Gotham-Book.otf") format("otf");
+}
+
+body{
     font-family:"Bernina";
+    background-color:$background-bleu !important;
 }
 
 img{
@@ -29,7 +35,7 @@ img{
 }
 
 .texte-petit{
-    font-size:10px;
+    font-size:12px;
 }
 
 header{
@@ -45,10 +51,11 @@ header{
             border-radius:5px;
             padding:10px;
             position:relative;
-            left:16%;
+            left: calc(100% - 270px);
             text-align:center;
             top:100px;
             transform: rotate(20deg);
+            font-size:larger;
             span{
                 color:white;
             }
@@ -63,6 +70,7 @@ header{
             .slogan-texte{
                 color:white;
                 margin-left:15px;
+                font-size:larger;
                 span{
                     display:block;
                 }
@@ -77,15 +85,54 @@ header{
         flex-wrap:wrap;
         > div{
             width:50%;
+            height:100px;
+        }
+        .logo{
+            display:flex;
         }
         .prendre-rdv{
             padding: 30px 10px;
+            display:flex;
+            justify-content: flex-end;
             button{
-                width: 100%;
+                width: 150px;
                 border-radius: 5px;
                 border: 1px solid black;
-                background-color: white;
+                background-color: $background-bleu;
                 cursor:pointer;
+                color: $couleur-texte;
+                transition: .3s;
+                &:hover{
+                    background-color: $couleur-texte;
+                    color: $background-bleu;
+                }
+            }
+            
+        }
+    }
+    .title, .description{
+        color:$couleur-texte;
+        text-align:center;
+        margin-top:15px;
+        padding:5px;
+    }
+    .texte-ice-experience{
+        margin-left:10px;
+        color:$couleur-texte;
+        font-family: "Gotham-Book";
+    }
+    .techniques{
+        display:flex;
+        flex-wrap:wrap;
+        justify-content: center;
+        .tech{
+            text-align:center;
+            img{
+                border-radius:50%;
+            }
+            h5{
+                font-family:"Gotham-Book";
+                margin-top:10px;
             }
         }
     }
@@ -93,7 +140,20 @@ header{
 
 @media screen and (min-width:$breakpoint-2){
     .container{
-        max-width:$breakpoint-2;
+        .techniques{
+            .t1{
+                order:2;
+            }
+            .t2{
+                order:3;
+            }
+            .t3{
+                order:1;
+            }
+            .tech img{
+                width:85%;
+            }
+        }
     }
 }
 
@@ -101,90 +161,35 @@ header{
     header{
         .container-full{
             height:800px;
+            .slogan{
+                top: 620px;
+                .slogan-texte{
+                    span{
+                        display:initial;
+                    }
+                }
+            }
+            .promo{
+                left: calc(100% - 340px);
+            }
         }
     }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*$orange:rgb(252, 183, 49);
-$grey:rgb(109, 111, 113);
-$green1: rgb(179, 209, 67);
-$green2: rgb(100, 123, 34);
-
-
-.container{
-    width:100%;
-    text-align:center;
-    .logo-entreprise{
-        max-height:60px;
-    }
-    .slogan{
-        color:$orange;
-    }
-    .pictos .picto{
-        width:40%;
-        margin:0;
-        display:inline-block;
-    }
-    .pictos .picto img{
-        width:100px;
-        margin:20px;
-    }
-}
-
-.container-full{
-    width:100%;
-}
-
-// ou -> pictos: display:flex; flex-wrap:wrap; et les enfants: .picto: width:50%
-
-.textes-1{
-    margin-top:30px;
-    background-image: url('../svg/points.svg');
     .container{
-        display:flex;
-        flex-direction:column;
-        p:nth-child(1){
-            font-weight:bold;
-        }
-    }
-}
-
-@media (min-width:$breakpoint-2){
-    .pictos .picto{
-        width:24% !important;
-        margin:0 !important;
-        display:inline-block;
-    }
-}
-
-@media (min-width:$breakpoint-1){
-    .container{
-        max-width:$breakpoint-1;
+        max-width:$breakpoint-3;
         margin:0 auto;
-        .logo-entreprise{
-            max-height:100px;
+        .intro{
+            .prendre-rdv{
+                padding-top:10px;
+                button{
+                    height: 40px;
+                }
+            }
         }
-        .pictos .picto{
-            margin-top:30px;
-            height:180px;
+        .texte-ice-experience{
+            float:right;
+        }
+        .techniques{
+            clear:both;
         }
     }
-    .textes-1 .container{
-        flex-direction:row;
-    }
-}*/
+}
