--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,6 +1,5 @@
-$breakpoint-1:466px;
-$breakpoint-2:668px;
-$breakpoint-3:900px;
+$breakpoint-1:668px;
+$breakpoint-2:900px;
 $background-bleu: rgb(231, 248, 252);
 $couleur-texte: darken($background-bleu, 80);
 $couleur-promo: rgb(128, 3, 32);
@@ -41,7 +40,7 @@ img{
 header{
     .container-full{
         height:600px;
-        background-image:url('.././background.jpg');
+        background-image:url('.././background.jpg?1');
         background-position-x: center;
         background-size: cover;
         .promo{
@@ -111,14 +110,14 @@ header{
         }
     }
     .title, .description{
-        color:$couleur-texte;
-        text-align:center;
-        margin-top:15px;
-        padding:5px;
+        color: $couleur-texte;
+        text-align: center;
+        margin-top: 15px;
+        padding: 5px;
     }
     .texte-ice-experience{
-        margin-left:10px;
-        color:$couleur-texte;
+        margin-left: 10px;
+        color: $couleur-texte;
         font-family: "Gotham-Book";
     }
     .techniques{
@@ -130,7 +129,7 @@ header{
             img{
                 border-radius:50%;
             }
-            h5{
+            h3{
                 font-family:"Gotham-Book";
                 margin-top:10px;
             }
@@ -138,7 +137,7 @@ header{
     }
 }
 
-@media screen and (min-width:$breakpoint-2){
+@media screen and (min-width:$breakpoint-1){
     .container{
         .techniques{
             .t1{
@@ -157,7 +156,7 @@ header{
     }
 }
 
-@media screen and (min-width:$breakpoint-3){
+@media screen and (min-width:$breakpoint-2){
     header{
         .container-full{
             height:800px;
@@ -175,7 +174,7 @@ header{
         }
     }
     .container{
-        max-width:$breakpoint-3;
+        max-width:$breakpoint-2;
         margin:0 auto;
         .intro{
             .prendre-rdv{
